css/info.css
/* Adding a gradient background. */
.gradient {
  background: linear-gradient(217deg, rgba(141, 156, 179, .8), rgba(31, 38, 48, 0) 70%),
              linear-gradient(127deg, rgba(255, 255, 255, .8), rgba(141, 156, 179, 0) 70%),
              linear-gradient(336deg, rgba(119, 167, 236, .8), rgba(119, 167, 236, 0) 70%);
  margin-top: -20px;
  height: 100%;
  width: 100%;
}


/* Editing header. */
h2 {
  padding-top: 40px;
  padding-left: 280px;
  padding-bottom: 15px;
}


/* Button formatting. */
.btn {
    background-color: rgb(141, 156, 179);
    padding-right: 20px;
    padding-left: 20px;
    text-align: center;
    font-size: 18px;
    margin-left: 400px;
    position: absolute;
    font-family: "Times New Roman";
}

/* Formatting the table and its contents. */
table {
  border-collapse: collapse; 
  border: 2px solid black;
  background-color: white;
}

.padding {
  height: 50px;
  text-align: center;
  background: transparent;
}

h3 {
  front-size: 32px;
  padding-right: 20px;
  padding-left: 20px;
}

tr {
  border: 2px solid black;
  background-color: white;
}

td {
  font-size: 18px;
  padding: 20px;
}

.paragraph {
  font-size: 16px;
}

img {
  height: 60px;
  width: 60px; 
}


/* Changing the spacing of some of the text. */
.spacing1, .spacing2 {
  padding-left: 10px;
}

.indent {
  padding-left: 40px;
}


/* Getting rid of the margin that lines the entire page. */
body {
  overflow-x: hidden;
  margin-top: 0px;
  margin-left: 0px;
  margin-right: 0px;
  margin-bottom: -5px;
}

